--- a/src/components/inputs/inputs.scss
+++ b/src/components/inputs/inputs.scss
@@ -1,4 +1,10 @@
 .input{
+    color: #A9B1D1;
+    font-weight: 300;
+    font-size: 12px;
+    margin: 10px 0;
+    line-height: 20px;
+
     &__p {
         cursor: pointer;
         display: flex;
@@ -27,6 +33,8 @@
 }
 
 .radio{
+    margin: 10px 0;
+    padding: 10px 0;
     &__p {
         cursor: pointer;
         display: flex;
@@ -66,10 +74,16 @@
     border-radius: 6px;
     padding: 20px;
     font-size: 14px;
+    font-weight: bold;
     letter-spacing: 0.8px;
     margin: 10px 0;
     color: white;
     background-color: #EF3340;
+
+    &__arrow{
+        color: white;
+        float: right;
+    }
 }
 .inputsubmit:disabled {
     background-color: #EDEFF5;
