--- a/src/components/utils/asegurados.scss
+++ b/src/components/utils/asegurados.scss
@@ -73,6 +73,10 @@
         font-size: 14px;
         text-align: left;
         padding: 25px 0;
+        background: none;
+        border: none;
+        color: #939DFF;
+        cursor: pointer;
     }
     &__cancelar{
         font-size: 16px;
