--- a/src/components/inputs/inputs.scss
+++ b/src/components/inputs/inputs.scss
@@ -4,6 +4,7 @@
     font-size: 12px;
     margin: 10px 0;
     line-height: 20px;
+    text-transform: capitalize;
 
     &__p {
         cursor: pointer;
@@ -35,6 +36,8 @@
 .radio{
     margin: 10px 0;
     padding: 10px 0;
+    text-transform: capitalize;
+
     &__p {
         cursor: pointer;
         display: flex;
@@ -79,6 +82,7 @@
     margin: 10px 0;
     color: white;
     background-color: #EF3340;
+    text-transform: capitalize;
 
     &__arrow{
         color: white;
@@ -120,7 +124,8 @@
         pointer-events: none;
     }
     
-    &__input:focus ~ &__label{ 
+    &__input:focus ~ &__label,
+    &__input:valid ~ &__label{ 
         padding: 8px 0 0 20px;
         font-size: 12px;
     }
