--- a/src/components/utils/asegurados.scss
+++ b/src/components/utils/asegurados.scss
@@ -33,6 +33,7 @@
             &--nombre{
                 font-size: 16px;
                 color: #494F66;
+                text-transform: capitalize;
             }
             &--dni{
                 font-size: 12px;
