--- a/src/components/formularios/formpagar.scss
+++ b/src/components/formularios/formpagar.scss
@@ -3,38 +3,13 @@
     margin-left: 10%;
     padding: 0 0 30px 0;
 
-    &__felicidad {
-        font-size: 16px;
-        font-family: 'Roboto';
-        font-weight: 300;
-        color: #676f8f;
-        line-height: 24px;
-        display: inline-block;
-        margin-left: 10px;
-    }
-
-    &__icon{
-        color: #92D66F;
-        font-size: 12px;
-    }
-
-    &__button {
-        width: 40%;
-        background-color:#EF3340; 
-        border: none;
-        padding: 15px;
-        color: white;
-        border-radius: 6px;
-        margin: 10px 0;
-    }
-
     &__datos {
         color: #494F66;
         font-weight: 300;
         font-size: 18px;
     }
 
-    &__dscto, &__normal, &__medio{
+    &__normal, &__medio{
         border-radius: 5px;
         padding: 30px 20px 10px 20px;
         width: 100%;
@@ -44,34 +19,47 @@
         color: #494F66;
         margin: 0;
         font-size: 16px;
-    }
-
-    &__normal {
-        display: inline-block;
+        font-family: 'Lato';
     }
 
     &__medio {
         width: 50%;
-        display: inline-block;
     }
     &__label{
         position: absolute;
         left: 10%;
         transition: .5s;
         padding: 20px;
+        color:  #A9B1D1;
+        font-family: 'Roboto';
+        pointer-events: none;
+        font-size: 16px;
+    }
+
+    
+    &__label--cvv{
+        position: absolute;
+        left: 50%;
+        transition: .5s;
+        padding: 20px;
         color:  #A9B1D1;;
         pointer-events: none;
     }
     
-    &__normal:focus ~ &__label{ 
+    &__normal:focus ~ &__label,
+    &__normal:valid ~ &__label{ 
         padding: 8px 0 0 20px;
         font-size: 12px;
     }
-    &__medio:focus ~ &__label{ 
+
+    &__medio:focus ~ &__label,
+    &__medio:valid ~ &__label{ 
         padding: 8px 0 0 20px;
         font-size: 12px;
     }
-    &__dscto:focus ~ &__label{ 
+
+    &__medio:focus ~ &__label--cvv,
+    &__medio:valid ~ &__label--cvv{ 
         padding: 8px 0 0 20px;
         font-size: 12px;
     }
