--- a/src/components/utils/planes.scss
+++ b/src/components/utils/planes.scss
@@ -94,5 +94,36 @@
             }
         }
     }
+
+    &__icon{
+        color: #92D66F;
+        font-size: 12px;
+    }
+
+    &__felicidad {
+        font-size: 16px;
+        font-family: 'Roboto';
+        font-weight: 300;
+        color: #676f8f;
+        line-height: 24px;
+        display: inline-block;
+        margin-left: 10px;
+    }
+
+    &__descuento {
+
+        &--button {
+            width: 90px;
+            height: 40px;
+            background-color:#EF3340; 
+            border: none;
+            padding: 10px;
+            color: white;
+            border-radius: 6px;
+            position: absolute;
+            top: 605px;
+            left: 242px;
+        }
+    }
 }
 
