--- a/src/components/formularios/form-signin.scss
+++ b/src/components/formularios/form-signin.scss
@@ -60,3 +60,12 @@
 
     }
 }
+@media (min-width: 768px){
+    .formsign{
+        width: 20%;
+        float: right;
+        margin-right: 15%;
+        padding-top: 80px;
+    }
+  }
+
