--- a/src/components/utils/carousel.scss
+++ b/src/components/utils/carousel.scss
@@ -8,6 +8,7 @@
         padding: 30px;
         box-sizing: border-box;
         float: left;
+
         &--h1{
             font-size: 25px;
             margin: 0;
@@ -17,12 +18,16 @@
             font-family: 'Roboto', sans-serif;
         }
 
-        &--title{
-            margin-top: 40px;
-            font-size: 11px;
-            font-weight: 300;
-            letter-spacing: 0.6px;
+        &--servicios {
+            &--title{
+                margin-top: 40px;
+                font-size: 12px;
+                font-weight: 300;
+                letter-spacing: 0.6px;
+                font-family: 'Lato';
+            }
         }
+        
 
         &--pages{
             font-size: 13px;
@@ -32,6 +37,11 @@
 
         &--weigth{
             font-weight: 1;
+        }
+
+        &--icon{
+            margin: 0 5px 0 0;
+            font-size: 15px;
         }
     }
 
@@ -46,9 +56,60 @@
             margin-top: 10px;
         }
     }
+    .escritorio{
+        display: none;
+    }
 }
 
-.icon{
-    margin: 0 5px 0 0;
-    font-size: 15px;
-}
+@media (min-width: 768px){
+    .carousel {
+        width: 55%;
+        display: inline-block;
+        margin-bottom: 0;
+        box-sizing: border-box;
+        height: 100vh;
+
+        &__article{
+            padding: 80px 0 0 181px;;
+
+            &--h1{
+                font-size: 48px;
+            }
+
+            &--p{
+                font-size: 18px;
+            }
+
+            &--servicios {
+                margin: 35px 0;
+
+                &--title{
+                    margin: 9px 0;
+                    font-size: 16px;
+                    font-family: 'Roboto';
+                }
+            }
+
+            &--footer {
+                font-size: 12px;
+                color: #FFD7DA;
+                margin-top: 70px;
+            }
+            
+        }
+
+        &__aside{
+
+        }
+
+        .mobile{
+            display: none;
+        }
+
+        .escritorio {
+            display: block;
+        }
+
+    }
+} 
+
