--- a/src/components/utils/carousel.scss
+++ b/src/components/utils/carousel.scss
@@ -1,3 +1,5 @@
+// Estilos al bloque inicial de bienvenida
+
 .carousel {
     background-color: #EF3340;
     color: white;
@@ -96,10 +98,6 @@
                 margin-top: 70px;
             }
             
-        }
-
-        &__aside{
-
         }
 
         .mobile{
