--- a/src/components/utils/carousel.scss
+++ b/src/components/utils/carousel.scss
@@ -100,6 +100,14 @@
             
         }
 
+        &__aside {
+
+            &--img-desktop{
+                margin: 35% 60px;
+                width: 100%;
+            }
+        }
+
         .mobile{
             display: none;
         }
